fixed flex image box stretching full width when set to wide same with tall images

--- a/assets/sass/sections/_displays.scss
+++ b/assets/sass/sections/_displays.scss
@@ -85,7 +85,7 @@
   padding: 5px;
   text-align: center;
   font-size: 14px;
-  width: auto;
+  
   height: 200px;
 }
 
@@ -97,7 +97,7 @@
   text-align: center;
   font-size: 14px;
   width: 200px;
-  height: auto;
+
 }
 
 .flexbox-display-icon-home-hidden, .flexbox-display-icon-page-hidden {
